# robot

./: Cargo.toml  README.md
src/: controller.rs  main.rs  solutions.rs
src/solutions/: command_pattern.rs  no_pattern.rs  state_pattern.rs  type_state_pattern.rs
