[package]
name = "robot"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = "1.43.0"
utoipa = { version = "5.3.1", features = ["actix_extras", "yaml"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }


[features]
default = ["no_pattern"]
command = []
state = []
type_state = []
no_pattern = []
